@@ -13,7 +13,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclBasic.c,v 1.54 2002/03/27 14:35:40 msofer Exp $
+ * RCS: @(#) $Id: tclBasic.c,v 1.55 2002/03/27 19:20:54 msofer Exp $
  */
 
 #include "tclInt.h"
@@ -3581,7 +3581,8 @@ Tcl_EvalEx(interp, script, numBytes, flags)
 		code = TCL_ERROR;
 	    } else {
 		iPtr->numLevels++;    
-		code = TclEvalObjvInternal(interp, objectsUsed, objv, p, bytesLeft, 0);
+		code = TclEvalObjvInternal(interp, objectsUsed, objv, p, 
+		        parse.commandStart + parse.commandSize - p, 0);
 		iPtr->numLevels--;
 	    }
 	    if (code != TCL_OK) {
